--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <h1>Acessar</h1>
       <label>
         Email:
-        <input class="inputMail" id="inputEmail" type="email" onkeypress="removaTodoEspaco()">
+        <input class="inputMail" id="inputEmail" type="email">
       </label>
       <label>
         Senha:
