--- a/index.html
+++ b/index.html
@@ -6,14 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>To-Do App</title>
-
   <!-- ---------------- estilos compartilhados entre login e signup ---------------- -->
   <link rel="stylesheet" href="styles/acesso.css">
-
-  <!-- ---------------------- lógica aplicada no login ----------------------- -->
-  <script src="/scripts/utils.js"></script>
-  <script src="/scripts/index.js"></script>
-
 </head>
 
 <body>
@@ -22,7 +16,7 @@
   </div>
 
   <div class="right">
-    <form id="forms">
+    <form id="formulario">
       <div class="form-header">
         <p>To-Do App</p>
       </div>
@@ -33,17 +27,19 @@
       </label>
       <label>
         Senha:
-        <input id="inputPassword" type="password">
+        <input class="inputPass" id="inputPassword" type="password">
       </label>
 
       <button type="submit">Acessar</button>
-
+      <div class="error" id="erro"></div>
     </form>
     <div class="ingressar">
       <a href="signup.html">Não possui conta? Crie agora mesmo</a>
     </div>
   </div>
-
+  <!-- ---------------------- lógica aplicada no login ----------------------- -->
+  
 </body>
-
+<script src="/scripts/utils.js"></script>
+  <script src="/scripts/index.js"></script>
 </html>
