--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <input class="inputPass" id="inputPassword" type="password">
       </label>
 
-      <button id="botao" type="submit">Acessar</button>
+      <button class="sub" id="botao" type="submit">Acessar</button>
       <div class="error" id="erro"></div>
     </form>
     <div class="ingressar">
