--- a/signup.html
+++ b/signup.html
@@ -22,33 +22,33 @@
     <img src="./assets/pessoa-signup.png" alt="">
   </div>
   <div class="right">
-    <form>
+    <form id="registro">
       <div class="form-header">
         <p>To-Do App</p>
       </div>
 
       <label>
         Nome:
-        <input type="text">
+        <input class="nomeRegistro" id="nomereg" type="text">
       </label>
       <label>
         Sobrenome:
-        <input type="text">
+        <input class="sobrenomeRegistro" id="sobrenomereg" type="text">
       </label>
       <label>
         Email:
-        <input type="email">
+        <input class="emailRegistro" id="emailreg" type="email">
       </label>
       <label>
         Senha:
-        <input type="password">
+        <input class="senhaRegistro" id="senhareg" type="password">
       </label>
       <label>
         Repetir senha:
-        <input type="password">
+        <input class="senhaRegistroC" id="senharegc" type="password">
       </label>
 
-      <button>Criar conta</button>
+      <button type="submit" class="botaoRegistro" id="botaoreg">Criar conta</button>
 
     </form>
     <div class="ingressar">
