--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
   <!-- ---------------------- lógica aplicada no login ----------------------- -->
   
 </body>
-<script src="./scripts/utils.js"></script>
-  <script src="./scripts/index.js"></script>
+<script src="/scripts/utils.js"></script>
+  <script src="/scripts/index.js"></script>
 </html>
