--- a/signup.html
+++ b/signup.html
@@ -46,8 +46,8 @@
         <input class="senhaRegistroC" id="senharegc" type="password">
       </label>
 
-      <button type="submit" class="botaoRegistro" id="botaoreg">Criar conta</button>
-
+      <button type="submit" class="botaoRegistro" id="botaoreg" disabled="disabled">Criar conta</button>
+      <div class="error" id="erro"></div>
     </form>
     <div class="ingressar">
       <a href="index.html">Já possui conta? Acesse aqui</a>
@@ -55,6 +55,6 @@
   </div>
 
 </body>
-<script src="./scripts/signup.js"></script>
+<script src="./scripts/singup.js"></script>
 <script src="./scripts/utils.js"></script>
 </html>
