--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   <!-- ---------------------- lógica aplicada no login ----------------------- -->
   
 </body>
-  <script src="./scripts/index.js"></script>
-  <script src="./scripts/utils.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
+  <script type="module" src="./scripts/singup.js"></script>
+  <script type="module" src="./scripts/utils.js"></script>
 </html>
