variaveis do fetch

--- a/signup.html
+++ b/signup.html
@@ -46,7 +46,7 @@
         <input id="senharegc" type="password">
       </label>
 
-      <button type="submit" name="criar">Criar conta</button>
+      <button type="submit" name="criar" onclick="registrar(event)">Criar conta</button>
       <div id="erro"></div>
     </form>
     <div class="ingressar">
