--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
   
 </body>
   <script  src="./scripts/index.js"></script>
-  <!-- <script  src="./scripts/singup.js"></script> -->
+ <script  src="./scripts/singup.js"></script>
   <script  src="./scripts/utils.js"></script>
 </html>
