ajsute na pagina de ligin

--- a/tarefas.html
+++ b/tarefas.html
@@ -32,9 +32,9 @@
     </nav>
 
     <div class="user-info">
-      <p>Nome usuário</p>
+      <p id="nome-usuario">Nome usuário</p>
       <div class="user-image"></div>
-      <p id="closeApp">Finalizar sessão</i>
+      <p id="closeApp" onclick="finalizarSessao()">Finalizar sessão</i>
       </p>
     </div>
   </header>
