validar botao add

--- a/tarefas.html
+++ b/tarefas.html
@@ -40,10 +40,10 @@
   </header>
 
 
-  <form class="nova-tarefa">
+  <form class="nova-tarefa" name="formtarefa">
     <div class="not-done "></div>
-    <input id="novaTarefa" type="text" placeholder="Nova tarefa">
-    <button type="submit">
+    <input id="novaTarefa" type="text" placeholder="Nova tarefa" minlength="5">
+    <button type="submit" id="add">
       <img src="./assets/plus.png" alt="Adicionar uma nova tarefa">
     </button>
   </form>
