--- a/signup.html
+++ b/signup.html
@@ -20,7 +20,7 @@
     <img src="./assets/pessoa-signup.png" alt="">
   </div>
   <div class="right">
-    <form name="registro">
+    <form name="registro" id="myForm">
       <div class="form-header">
         <p>To-Do App</p>
       </div>
