--- a/tarefas.html
+++ b/tarefas.html
@@ -42,7 +42,7 @@
 
   <form class="nova-tarefa" name="formtarefa">
     <div class="not-done "></div>
-    <input id="novaTarefa" type="text" placeholder="Nova tarefa" minlength="5">
+    <input id="novaTarefa" type="text" placeholder="Nova tarefa" onkeydown="validar()">
     <button type="submit" id="add">
       <img src="./assets/plus.png" alt="Adicionar uma nova tarefa">
     </button>
