--- a/tarefas.html
+++ b/tarefas.html
@@ -52,27 +52,12 @@
   <ul class="tarefas-pendentes">
     <div id="lista-tarefas">
     <!-- <div id="skeleton"> -->
-      <li class="tarefa">
+   <!--    <li class="tarefa">
         <div class="not-done"></div>
         <div class="descricao">
           <p class="nome">Nova tarefa</p>
           <p class="timestamp">Criada em: 15/07/21</p>
-        </div>
-      </li>
-      <li class="tarefa">
-        <div class="not-done"></div>
-        <div class="descricao">
-          <p class="nome">Nova tarefa</p>
-          <p class="timestamp">Criada em: 15/07/21</p>
-        </div>
-      </li>
-      <li class="tarefa">
-        <div class="not-done"></div>
-        <div class="descricao">
-          <p class="nome">Nova tarefa</p>
-          <p class="timestamp">Criada em: 15/07/21</p>
-        </div>
-      </li>
+        </div> -->
 
     </div>
   </ul>
