--- a/tarefas.html
+++ b/tarefas.html
@@ -42,8 +42,8 @@
 
   <form class="nova-tarefa" name="formtarefa" id="myForm">
     <div class="not-done "></div>
-    <input id="novaTarefa" type="text" placeholder="Nova tarefa" tabindex="1" minlength="5" onkeydown="validar(this,this.value)">
-    <button type="submit" id="add" tabindex="2">
+    <input id="nova-Tarefa" type="text" placeholder="Nova tarefa" tabindex="1" minlength="5" onkeyup="validar(this,this.value)">
+    <button type="submit" id="add" tabindex="2" onclick="criarTarefa(event)">
       <img src="./assets/plus.png" alt="Adicionar uma nova tarefa">
     </button>
   </form>
@@ -51,20 +51,15 @@
 
   <ul class="tarefas-pendentes">
     <div id="lista-tarefas">
-    <!-- <div id="skeleton"> -->
-   <!--    <li class="tarefa">
-        <div class="not-done"></div>
-        <div class="descricao">
-          <p class="nome">Nova tarefa</p>
-          <p class="timestamp">Criada em: 15/07/21</p>
-        </div> -->
+     <!--  <div id="skeleton"> -->
 
     </div>
   </ul>
 
   <h2 class="titulo-terminadas">Tarefas terminadas</h2>
   <ul class="tarefas-terminadas">
-
+    <div id="tarefas-terminadas">
+    </div>
   </ul>
 
 </body>
