--- a/tarefas.html
+++ b/tarefas.html
@@ -42,7 +42,7 @@
 
   <form class="nova-tarefa" name="formtarefa" id="myForm">
     <div class="not-done "></div>
-    <input id="nova-Tarefa" type="text" placeholder="Nova tarefa" tabindex="1" minlength="5" onkeyup="validar(this,this.value)">
+    <input id="nova-Tarefa" type="text" placeholder="Nova tarefa" autocomplete="off" tabindex="1" minlength="5" onkeyup="validar(this,this.value)">
     <button type="submit" id="add" tabindex="2" onclick="criarTarefa(event)">
       <img src="./assets/plus.png" alt="Adicionar uma nova tarefa">
     </button>
